--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
-    "20": "^3.1.9",
+    "20": "^1.0.0",
     "22": "^0.0.0",
     "@ethersproject/address": "^5.7.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
@@ -43,8 +43,8 @@
     "framer-motion": "^11.11.17",
     "ioredis": "^5.4.2",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
-    "nodemailer": "^6.9.16",
+    "next": "^15.1.6",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -62,6 +62,8 @@
     "web3": "^4.16.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/github": "^7.1.0",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.17",
@@ -71,7 +73,7 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
   "main": "index.js",
