--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -39,7 +41,7 @@
     "dotenv": "^16.4.7",
     "ethereumjs-util": "^7.1.5",
     "express": "^4.21.2",
-    "firebase": "^11.0.2",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.11.17",
     "ioredis": "^5.4.2",
     "lucide-react": "^0.460.0",
